force-app/main/default/objects/Restore_Profile__c/Restore_Profile__c.object-meta.xml
<CustomObject>
    <description>Defines restore behavior used when rehydrating archived Big Object records back into a source object.</description>
    <label>Restore Profile</label>
    <nameField>
        <label>Restore Profile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Restore Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>