force-app/main/default/objects/Restore_Profile__c/fields/Archive_Config__c.field-meta.xml
<CustomField>
    <fullName>Archive_Config__c</fullName>
    <description>Parent Archive Config that owns this restore profile.</description>
    <label>Archive Config</label>
    <referenceTo>Archive_Config__c</referenceTo>
    <relationshipLabel>Restore Profiles</relationshipLabel>
    <relationshipName>Restore_Profiles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>