force-app/main/default/objects/Restore_Profile__c/fields/Bypass_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Automation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set a static-bypass flag during restore DML so generated logging/automation does not re-fire.</description>
    <label>Bypass Automation</label>
    <type>Checkbox</type>
</CustomField>