force-app/main/default/objects/Restore_Profile__c/fields/Match_Field__c.field-meta.xml
<CustomField>
    <fullName>Match_Field__c</fullName>
    <description>Dedupe key used on restore (default OriginalId__c external Id).</description>
    <label>Match Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>