force-app/main/default/objects/Restore_Profile__c/fields/On_Conflict__c.field-meta.xml
<CustomField>
    <fullName>On_Conflict__c</fullName>
    <description>Behavior when a matching record already exists in the target object.</description>
    <label>On Conflict</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skip</fullName>
                <default>true</default>
                <label>Skip</label>
            </value>
            <value>
                <fullName>Overwrite</fullName>
            </value>
            <value>
                <fullName>Clone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>