force-app/main/default/objects/Restore_Profile__c/fields/Reparent_Owner__c.field-meta.xml
<CustomField>
    <fullName>Reparent_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restore the original owner rather than the running user.</description>
    <label>Reparent Owner</label>
    <type>Checkbox</type>
</CustomField>