force-app/main/default/objects/Restore_Profile__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API name of the object to restore into (usually the original object).</description>
    <label>Target Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>